--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -280,7 +280,7 @@
          </size>
         </property>
         <property name="text">
-         <string>3D-модель КА</string>
+         <string>3D-модель</string>
         </property>
        </widget>
       </item>
