--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -193,14 +193,27 @@
        <widget class="QLabel" name="label_19">
         <property name="geometry">
          <rect>
-          <x>180</x>
-          <y>30</y>
+          <x>10</x>
+          <y>10</y>
           <width>201</width>
           <height>20</height>
          </rect>
         </property>
         <property name="text">
          <string>Настройки Трасс</string>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="pBsettingMap">
+        <property name="geometry">
+         <rect>
+          <x>20</x>
+          <y>40</y>
+          <width>104</width>
+          <height>36</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Настройки</string>
         </property>
        </widget>
       </widget>
